import org.gradle.api.plugins.ExtensionContainer

plugins {
	kotlin("jvm") version "1.9.25"
	kotlin("plugin.spring") version "1.9.25"
	id("org.springframework.boot") version "2.7.5"
	id("io.spring.dependency-management") version "1.1.7"
	id("com.diffplug.spotless") version "6.21.0"
}

group = "com.knowledge"
version = "0.0.1-SNAPSHOT"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation("org.springframework.boot:spring-boot-starter-data-mongodb-reactive")
	implementation("org.springframework.boot:spring-boot-starter-data-redis-reactive")
	implementation("org.springframework.boot:spring-boot-starter-webflux")
	implementation("org.springframework.boot:spring-boot-starter-validation")
	implementation("org.springframework.boot:spring-boot-starter-rsocket")
	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
	implementation("org.springframework.boot:spring-boot-starter-security")
	implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
//	implementation("io.jsonwebtoken.boot:jjwt:0.12.6")
	implementation("de.undercouch:bson4jackson:2.13.0")
	implementation("io.projectreactor.kotlin:reactor-kotlin-extensions")
	implementation("org.jetbrains.kotlin:kotlin-reflect")
	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
	implementation("org.springframework.kafka:spring-kafka")
	implementation("org.springframework.boot:spring-boot-starter-validation")
	testImplementation("org.springframework.boot:spring-boot-starter-test")
	testImplementation("org.mockito.kotlin:mockito-kotlin:5.2.1")
	testImplementation("io.projectreactor:reactor-test")
	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
	testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test")
	testImplementation("org.springframework.kafka:spring-kafka-test")
	testImplementation("org.testcontainers:testcontainers:1.19.7")
	testImplementation("org.testcontainers:junit-jupiter:1.19.7")
	testImplementation("org.mockito:mockito-inline:5.2.0")

	// Optional - use specific containers depending on what you test
	testImplementation("org.testcontainers:kafka:1.19.7")
	testImplementation("org.testcontainers:mongodb:1.19.7")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

spotless {
	kotlin {
		target("src/**/*.kt")
		ktlint("0.48.2").userData(mapOf("indent_size" to "4"))
	}
	format("misk") {
		target("*.gradle.kts", "*.md", ".gitignore")
		trimTrailingWhitespace()
		endWithNewline()
	}
}

//tasks.register("printExtensions") {
//	doLast {
//		println(project.extensions.)
//	}
//}

kotlin {
	compilerOptions {
		freeCompilerArgs.addAll("-Xjsr305=strict")
	}
}

tasks.withType<Test> {
	useJUnitPlatform()
}

tasks.register("printDependencies") {
	group = "custom"
	description = "Print dependencies"
	doLast {
		configurations.compileClasspath.get().files.forEach {
			println(it.name)
		}
	}
}

val cleanGenerated by tasks.registering(Delete::class) {
	delete("build/generated")
}

tasks.register("printProjectInfo") {
	group = "info"
	description = "Prints group, name, and version of the project"
	doLast {
		println("Project Group: ${project.group}")
		println("Project Name: ${project.name}")
		println("Project Version: ${project.version}")
	}
}

